tests/baselines/reference/project/circularReferencing/amd/circularReferencing.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.


==== decl.ts (0 errors) ====
    import mod = require("consume");
    export function call() {
    	mod.call();
    }
==== consume.ts (0 errors) ====
    import mod = require("decl");
    export function call() {
    	mod.call();
    }